DDMORE-1640: Increase permgen, add SSL java options to service.conf.
Turn of Spring Boot's autoconfiguration of ActiveMQ so it doesn't start
up embeddded broker.